translation updates for OSX installer and preference pane; remove Hebrew - we no longer officially support it, and it has not been updated in two years
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27706 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -6,17 +6,17 @@
 "Expired Authorization Error" = "Firmwaren kunne ikke opdateres: godkendelsen er udløbet.";
 "Firmware version" = "Firmwareversion %@.";
 "Firmware version invalid" = "Firmwareversionen er ugyldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "Der findes en opdateret version af Squeezebox Server som er klar til at blive installeret.";
+"There's no updated Squeezebox Server version available." = "Der findes ikke en nyere version af Squeezebox Server.";
+"Check for update" = "Søg efter opdateringer";
+"Download update" = "Hent opdatering";
+"Install update" = "Installer opdatering";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server skal stoppes før der kan foretages en oprydning. Vil du stoppe den nu?";
+"Run Cleanup" = "Foretag oprydning";
+"Cancel" = "Annuller";
+"Not now" = "Ikke nu";
+"Abort" = "Afbryd";
+"Rescan" = "Gennemsøg igen";
+"Invalid mysqueezebox.com username or password." = "Ugyldigt brugernavn eller adgangskode til mysqueezebox.com.";
+"The server is stopped" = "Serveren er stoppet";
+"The server is running" = "Serveren kører";
