--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -1,22 +1,23 @@
 "Start Server" = "Käynnistä palvelin";
 "Stop Server" = "Pysäytä palvelin";
-"Start Server Description" = "Käynnistä Squeezebox Server tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
+"Start Server Description" = "Käynnistä Squeeze Server tällä painikkeella. Kun se on käynnissä,
+soittimet voivat käyttää musiikkikirjastoa.";
 "Stop Server Description" = "Sulje Squeezebox Server tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
 "Authorization Launch Error" = "Laiteohjelmistoa ei voida päivittää: tiedosto Update Firmware.sh puuttuu.";
 "Expired Authorization Error" = "Laiteohjelmistoa ei voida päivittää: valtuutus vanhentunut.";
 "Firmware version" = "Laiteohjelmistoversio %@.";
 "Firmware version invalid" = "Väärä laiteohjelmistoversio.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "Squeezebox Serverin päivitetty versio on käytettävissä ja valmiina ladattavaksi.";
+"There's no updated Squeezebox Server version available." = "Squeezebox Serveristä ei ole saatavilla päivitettyä versiota.";
+"Check for update" = "Etsi päivityksiä";
+"Download update" = "Lataa päivitys";
+"Install update" = "Asenna päivitys";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server täytyy pysäyttää ennen puhdistuksen suorittamista. Haluatko pysäyttää sen nyt?";
+"Run Cleanup" = "Suorita puhdistus";
+"Cancel" = "Peruuta";
+"Not now" = "Ei nyt";
+"Abort" = "Keskeytä";
+"Rescan" = "Tarkista uudelleen";
+"Invalid mysqueezebox.com username or password." = "Virheellinen mysqueezebox.comin käyttäjätunnus tai salasana.";
+"The server is stopped" = "Palvelin on pysäytetty";
+"The server is running" = "Palvelin on käynnissä";
