--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -1,22 +1,22 @@
 "Start Server" = "Server starten";
 "Stop Server" = "Server anhalten";
 "Start Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
-"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server anzuhalten. Wenn der Server angehalten wurde, können Player nicht mehr auf Ihre Musiksammlung zugreifen.";
-"Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei Update Firmware.sh fehlt.";
-"Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung ist abgelaufen.";
+"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server anzuhalten. Wenn der Server angehalten wurde, können die Player nicht mehr auf Ihre Musiksammlung zugreifen.";
+"Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei 'Update Firmware.sh' fehlt.";
+"Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Authorisierung abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
-"Firmware version invalid" = "Ungültige Firmware-Version.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Firmware version invalid" = "Firmware-Version ungültig.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Eine aktualisierte Version von Squeezebox Server ist verfügbar und kann installiert werden.";
+"There's no updated Squeezebox Server version available." = "Es ist keine aktualisierte Version des Squeezebox Server verfügbar.";
+"Check for update" = "Nach Update suchen";
+"Download update" = "Update herunterladen";
+"Install update" = "Update installieren";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server muss vor der Ausführung der Bereinigung angehalten werden. Soll der Server jetzt angehalten werden?";
+"Run Cleanup" = "Bereinigung durchführen";
+"Cancel" = "Abbrechen";
+"Not now" = "Nicht jetzt";
+"Abort" = "Abbrechen";
+"Rescan" = "Musiksammlung durchsuchen";
+"Invalid mysqueezebox.com username or password." = "mysqueezebox.com-Benutzername oder -Kennwort ungültig.";
+"The server is stopped" = "Der Server wurde angehalten.";
+"The server is running" = "Der Server wird ausgeführt";
