--- a/osx/Preference Pane/Italian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Italian.lproj/Localizable.strings
@@ -1,22 +1,22 @@
 "Start Server" = "Avvia server";
 "Stop Server" = "Arresta server";
-"Start Server Description" = "Fai clic su questo pulsante per avviare Squeezebox Server. Una volta avviato Squeezebox Server, i lettori avranno accesso alla libreria musicale.";
-"Stop Server Description" = "Fai clic su questo pulsante per arrestare Squeezebox Server. Una volta arrestato Squeezebox Server, i lettori non saranno più in grado di accedere alla libreria musicale.";
+"Start Server Description" = "Fai clic su questo pulsante per avviare Squeezebox Server. Una volta avviato, i lettori avranno accesso alla libreria musicale.";
+"Stop Server Description" = "Fai clic su questo pulsante per arrestare Squeezebox Server. Una volta arrestato, i lettori non saranno più in grado di accedere alla libreria musicale.";
 "Authorization Launch Error" = "Impossibile aggiornare il firmware: File Update Firmware.sh mancante.";
 "Expired Authorization Error" = "Impossibile aggiornare il firmware: autorizzazione scaduta.";
 "Firmware version" = "Versione firmware %@.";
 "Firmware version invalid" = "Versione firmware non valida.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "È disponibile una versione aggiornata di Squeezebox Server, pronta per essere installata.";
+"There's no updated Squeezebox Server version available." = "Non è disponibile alcuna versione aggiornata di Squeezebox Server.";
+"Check for update" = "Verifica disponibilità aggiornamenti";
+"Download update" = "Scarica aggiornamento";
+"Install update" = "Installa aggiornamento";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Prima di eseguire la pulizia è necessario arrestare Squeezebox Server. Arrestarlo adesso?";
+"Run Cleanup" = "Esegui pulizia";
+"Cancel" = "Annulla";
+"Not now" = "Non adesso";
+"Abort" = "interrompi";
+"Rescan" = "Ripeti analisi";
+"Invalid mysqueezebox.com username or password." = "Nome utente o password di mysqueezebox.com non validi.";
+"The server is stopped" = "Il server è stato arrestato";
+"The server is running" = "Il server è in esecuzione";
