--- a/osx/Preference Pane/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Localizable.strings
@@ -1,22 +1,22 @@
 "Start Server" = "Start server";
 "Stop Server" = "Stopp server";
-"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når Squeezebox Server startes.";
-"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Squeezebox Server er stoppet.";
-"Authorization Launch Error" = "Kunne ikke finne fastvare: filen Update Firmware.sh mangler";
+"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når serveren startes.";
+"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når serveren er stoppet.";
+"Authorization Launch Error" = "Kunne ikke oppdatere fastvaren: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Kunne ikke oppdatere fastvare: autorisasjonen har utløpt.";
 "Firmware version" = "Fastvareversjon %@.";
-"Firmware version invalid" = "Fastvareversjonen er ugyldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Firmware version invalid" = "Ugyldig fastvareversjon.";
+"An updated Squeezebox Server version is available and ready to be installed." = "En oppdatert versjon av Squeezebox Server er tilgjengelig og klar til installering.";
+"There's no updated Squeezebox Server version available." = "Det finnes ingen oppdatert versjon av Squeezebox Server tilgjengelig.";
+"Check for update" = "Se etter oppdatering";
+"Download update" = "Last ned oppdatering";
+"Install update" = "Installer oppdatering";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server må stoppes før oppryddingen kan kjøres. Vil du stoppe den nå?";
+"Run Cleanup" = "Kjør opprydding";
+"Cancel" = "Avbryt";
+"Not now" = "Ikke nå";
+"Abort" = "Avbryt";
+"Rescan" = "Søk på nytt";
+"Invalid mysqueezebox.com username or password." = "Ugyldig brukernavn eller passord for mysqueezebox.com.";
+"The server is stopped" = "Serveren er stoppet";
+"The server is running" = "Serveren kjører";
