--- a/osx/Preference Pane/Polish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Polish.lproj/Localizable.strings
@@ -1,22 +1,22 @@
-"Start Server" = "Start Server";
-"Stop Server" = "Stop Server";
-"Start Server Description" = "Click this button to start the Squeezebox Server. Once started, players will be able to access your music library.";
-"Stop Server Description" = "Click this button to stop the Squeezebox Server. Once stopped, players will not be able to access your music library.";
-"Authorization Launch Error" = "Unable to update firmware: missing file Update Firmware.sh.";
-"Expired Authorization Error" = "Unable to update firmware: authorization expired.";
-"Firmware version" = "Firmware version %@.";
-"Firmware version invalid" = "Firmware version invalid.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Start Server" = "Uruchom serwer";
+"Stop Server" = "Zatrzymaj serwer";
+"Start Server Description" = "Kliknij ten przycisk, aby uruchomić program Squeezebox Server. Po uruchomieniu odtwarzacze będą mogły uzyskać dostęp do biblioteki muzyki.";
+"Stop Server Description" = "Kliknij ten przycisk, aby zatrzymać program Squeezebox Server. Po zatrzymaniu odtwarzacze nie będą mogły uzyskać dostępu do biblioteki muzyki.";
+"Authorization Launch Error" = "Nie można uaktualnić oprogramowania układowego: brak pliku Update Firmware.sh.";
+"Expired Authorization Error" = "Nie można uaktualnić oprogramowania układowego: autoryzacja wygasła.";
+"Firmware version" = "Wersja oprogramowania układowego %@.";
+"Firmware version invalid" = "Nieprawidłowa wersja oprogramowania układowego.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Zaktualizowana wersja programu Squeezebox Server jest dostępna i gotowa do zainstalowania.";
+"There's no updated Squeezebox Server version available." = "Brak dostępnej zaktualizowanej wersji programu Squeezebox Server.";
+"Check for update" = "Sprawdź dostępność aktualizacji";
+"Download update" = "Pobierz aktualizację";
+"Install update" = "Zainstaluj aktualizację";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Przed uruchomieniem czyszczenia należy zatrzymać program Squeezebox Server. Czy chcesz go zatrzymać teraz?";
+"Run Cleanup" = "Uruchom czyszczenie";
+"Cancel" = "Anuluj";
+"Not now" = "Nie teraz";
+"Abort" = "Przerwij";
+"Rescan" = "Przeszukaj ponownie";
+"Invalid mysqueezebox.com username or password." = "Nieprawidłowa nazwa użytkownika i hasło w usłudze mysqueezebox.com.";
+"The server is stopped" = "Serwer jest zatrzymany";
+"The server is running" = "Serwer działa";
