--- a/osx/Preference Pane/Russian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Russian.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server version 7.4, Copyright 2002-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Server, версия 7.4. © Logitech, 2002-2009";
+NSHumanReadableCopyright = "© Logitech, 2002-2009";
 NSPrefPaneIconLabel = "Squeezebox\nServer";
