--- a/osx/Preference Pane/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Russian.lproj/Localizable.strings
@@ -1,22 +1,22 @@
-"Start Server" = "Start Server";
-"Stop Server" = "Stop Server";
-"Start Server Description" = "Click this button to start the Squeezebox Server. Once started, players will be able to access your music library.";
-"Stop Server Description" = "Click this button to stop the Squeezebox Server. Once stopped, players will not be able to access your music library.";
-"Authorization Launch Error" = "Unable to update firmware: missing file Update Firmware.sh.";
-"Expired Authorization Error" = "Unable to update firmware: authorization expired.";
-"Firmware version" = "Firmware version %@.";
-"Firmware version invalid" = "Firmware version invalid.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Start Server" = "Запустить сервер";
+"Stop Server" = "Остановить сервер";
+"Start Server Description" = "Нажмите эту кнопку, чтобы запустить Squeezebox Server. После запуска медиатека будет доступна для плееров.";
+"Stop Server Description" = "Нажмите эту кнопку, чтобы остановить Squeezebox Server. После остановки медиатека будет недоступна для плееров.";
+"Authorization Launch Error" = "Не удалось обновить микропрограмму: отсутствует файл Update Firmware.sh.";
+"Expired Authorization Error" = "Не удалось обновить микропрограмму: истек срок действия авторизации.";
+"Firmware version" = "Версия микропрограммы %@.";
+"Firmware version invalid" = "Недопустимая версия микропрограммы.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Доступна и готова к установке обновленная версия Squeezebox Server.";
+"There's no updated Squeezebox Server version available." = "Нет доступных обновленных версий Squeezebox Server.";
+"Check for update" = "Проверить наличие обновления";
+"Download update" = "Загрузить обновление";
+"Install update" = "Установить обновление";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Перед выполнением очистки Squeezebox Server нужно остановить. Остановить сейчас?";
+"Run Cleanup" = "Запустить очистку";
+"Cancel" = "Отмена";
+"Not now" = "Не сейчас";
+"Abort" = "Прервать";
+"Rescan" = "Повтор сканирования";
+"Invalid mysqueezebox.com username or password." = "Недействительные имя пользователя или пароль mysqueezebox.com.";
+"The server is stopped" = "Cервер остановлен";
+"The server is running" = "Cервер выполняется";
