--- a/osx/Preference Pane/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Spanish.lproj/Localizable.strings
@@ -5,18 +5,18 @@
 "Authorization Launch Error" = "Imposible actualizar firmware: falta el archivo Update Firmware.sh.";
 "Expired Authorization Error" = "Imposible actualizar firmware: la autorización ha caducado.";
 "Firmware version" = "Versión de firmware %@.";
-"Firmware version invalid" = "La versión de firmware no es válida.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Firmware version invalid" = "Versión de firmware no válida.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Hay disponible una versión actualizada de Squeezebox Server y está lista para instalar.";
+"There's no updated Squeezebox Server version available." = "No hay disponible ninguna versión actualizada de Squeezebox Server.";
+"Check for update" = "Buscar actualización";
+"Download update" = "Descargar actualización";
+"Install update" = "Instalar actualización";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Antes de ejecutar la limpieza, se debe detener Squeezebox Server. ¿Desea detenerlo ahora?";
+"Run Cleanup" = "Ejecutar limpieza";
+"Cancel" = "Cancelar";
+"Not now" = "No ahora";
+"Abort" = "Cancelar";
+"Rescan" = "Volver a examinar";
+"Invalid mysqueezebox.com username or password." = "Contraseña o nombre de usuario mysqueezebox.com no válidos.";
+"The server is stopped" = "El servidor está detenido";
+"The server is running" = "El servidor está en ejecución";
