--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -1,22 +1,22 @@
-"Start Server" = "Start Server";
-"Stop Server" = "Stop Server";
-"Start Server Description" = "Click this button to start the Squeezebox Server. Once started, players will be able to access your music library.";
-"Stop Server Description" = "Click this button to stop the Squeezebox Server. Once stopped, players will not be able to access your music library.";
-"Authorization Launch Error" = "Unable to update firmware: missing file Update Firmware.sh.";
-"Expired Authorization Error" = "Unable to update firmware: authorization expired.";
-"Firmware version" = "Firmware version %@.";
-"Firmware version invalid" = "Firmware version invalid.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"Start Server" = "Spustit Server";
+"Stop Server" = "Zastavit Server";
+"Start Server Description" = "Ke spuštìní Squeezebox Server kliknìte na toto tlaèítko. Po spuštìní získají pøehrávaèe pøístup do vaší hudební knihovny.";
+"Stop Server Description" = "K zastavení Squeezebox Server kliknìte na toto tlaèítko. Po zastavení ztratí pøehrávaèe pøístup do vaší hudební knihovny.";
+"Authorization Launch Error" = "Není možné aktualizovat firmware: chybìjící soubor Update Firmware.sh.";
+"Expired Authorization Error" = "Není možné aktualizovat firmware: autorizace vypršela.";
+"Firmware version" = "Firmware verze %@.";
+"Firmware version invalid" = "Neplatná verze firmware.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Aktualizovaná verze Squeezebox Server je k dispozici a pøipravena k instalaci.";
+"There's no updated Squeezebox Server version available." = "K dispozici není žádná aktualizovaná verze Squeezebox Server.";
+"Check for update" = "Hledat aktualizace";
+"Download update" = "Stáhnout aktualizaci";
+"Install update" = "Instalovat aktualizaci";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Pøed zahájením èištìní musí být Squeezebox Server zastaven. Chcete ho zastavit nyní?";
+"Run Cleanup" = "Spustit èištìní";
+"Cancel" = "Storno";
+"Not now" = "Nyní ne";
+"Abort" = "Zrušit";
+"Rescan" = "Nové prohledání";
+"Invalid mysqueezebox.com username or password." = "Neplatné uživatelské jméno nebo heslo mysqueezebox.com.";
+"The server is stopped" = "Server je zastaven";
+"The server is running" = "Server je spuštìn";
