--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -1,22 +1,22 @@
 "Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik op deze knop om de Squeezebox Server te starten. Nadat de  Squeezebox Server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
-"Stop Server Description" = "Klik op deze knop om de Squeezebox Server te stoppen. Nadat de Squeezebox Server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
+"Start Server Description" = "Klik op deze knop om de Squeezebox Server te starten. Nadat de server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
+"Stop Server Description" = "Klik op deze knop om de Squeezebox Server te stoppen. Nadat de server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
 "Authorization Launch Error" = "Kan firmware niet updaten: bestand Update Firmware.sh ontbreekt.";
 "Expired Authorization Error" = "Kan firmware niet updaten: autorisatie verlopen.";
 "Firmware version" = "Firmwareversie %@.";
 "Firmware version invalid" = "Firmwareversie ongeldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "Er is een bijgewerkte versie van Squeezebox Server beschikbaar die direct geïnstalleerd kan worden.";
+"There's no updated Squeezebox Server version available." = "Er is geen bijgewerkte versie van Squeezebox Server beschikbaar.";
+"Check for update" = "Op update controleren";
+"Download update" = "Update downloaden";
+"Install update" = "Update installeren";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server moet worden stopgezet, voordat de opschoning wordt uitgevoerd. Wil je de server nu stoppen?";
+"Run Cleanup" = "Opschoning uitvoeren";
+"Cancel" = "Annuleer";
+"Not now" = "Niet nu";
+"Abort" = "Afbreken";
+"Rescan" = "Opnieuw scannen";
+"Invalid mysqueezebox.com username or password." = "Gebruikersnaam of wachtwoord van mysqueezebox.com ongeldig.";
+"The server is stopped" = "De server is gestopt";
+"The server is running" = "De server is actief";
