--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -1,22 +1,22 @@
-"Start Server" = "Démarrer";
-"Stop Server" = "Arrêter";
-"Start Server Description" = "Cliquez sur ce bouton pour démarrer le Squeezebox Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
-"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Squeezebox Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
-"Authorization Launch Error" = "Impossible de mettre à jour le micrologiciel: fichier Update Firmware.sh manquant.";
+"Start Server" = "Démarrer le serveur";
+"Stop Server" = "Arrêter le serveur";
+"Start Server Description" = "Cliquez sur ce bouton pour démarrer le Squeezebox Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
+"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Squeezebox Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
+"Authorization Launch Error" = "Impossible de mettre à jour le micrologiciel: fichier Update Firmware.sh manquant.";
 "Expired Authorization Error" = "Impossible de mettre à jour le micrologiciel: l'autorisation a expiré.";
 "Firmware version" = "Version %@ du micrologiciel.";
 "Firmware version invalid" = "Version du micrologiciel non valide.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "Une nouvelle version du Squeezebox Server est disponible et prête à l'installation.";
+"There's no updated Squeezebox Server version available." = "Aucune nouvelle version du Squeezebox Server n'est disponible.";
+"Check for update" = "Rechercher les mises à jour";
+"Download update" = "Télécharger la mise à jour";
+"Install update" = "Installer la mise à jour";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Le Squeezebox Server doit être arrêté avant le lancement du nettoyage. Souhaitez-vous l'arrêter maintenant?";
+"Run Cleanup" = "Lancer le nettoyage";
+"Cancel" = "Annuler";
+"Not now" = "Pas maintenant";
+"Abort" = "Arrêter";
+"Rescan" = "Analyser";
+"Invalid mysqueezebox.com username or password." = "Nom d'utilisateur ou mot de passe mysqueezebox.com non valide.";
+"The server is stopped" = "Le serveur est arrêté.";
+"The server is running" = "Le serveur est en cours d'exécution.";
