--- a/osx/Preference Pane/Installer/Czech.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Czech.lproj/InfoPlist.strings
@@ -2,5 +2,5 @@
 
 CFBundleName = "Squeezebox Server Installer";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server Installer version 7.4, Copyright 2003-2008 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
+CFBundleGetInfoString = "Squeezebox Server Installer verze 7.4, Copyright 2003-2009 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";
