--- a/osx/Preference Pane/Installer/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/InfoPlist.strings
@@ -2,5 +2,5 @@
 
 CFBundleName = "Installasjonsprogram for Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Installasjonsprogram for Squeezebox Server versjon 7.4, opphavsrett 2003-2008 Logitech";
-NSHumanReadableCopyright = "Opphavsrett 2003-2008 Logitech";
+CFBundleGetInfoString = "Installasjonsprogram for Squeezebox Server versjon 7.4, opphavsrett 2003–2009 Logitech";
+NSHumanReadableCopyright = "Opphavsrett 2003–2009 Logitech";
