--- a/osx/Preference Pane/Installer/Polish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Polish.lproj/Localizable.strings
@@ -1,8 +1,8 @@
-"Install" = "Install";
-"Update" = "Update";
-"Install Results" = "Install Results";
+"Install" = "Zainstaluj";
+"Update" = "Aktualizuj";
+"Install Results" = "Wyniki instalacji";
 "OK" = "OK";
-" installed successfully.\n" = " installed successfully.";
-" install failed.\n" = " install failed.";
-"You must have OS X 10.3 or later to run .\n" = "You must have OS X 10.3 or later to run .";
-"Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
+"Squeezebox Server installed successfully.\n" = "Program Squeezebox Server został zainstalowany pomyślnie.";
+"Squeezebox Server install failed.\n" = "Instalacja programu Squeezebox Server nie powiodła się.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Aby uruchomić program Squeezebox Server, wymagany jest system OS X 10.3 lub nowszy.";
+"Mac OS X 10.3 Required" = "Wymagany system Mac OS X 10.3";
