--- a/osx/Preference Pane/Polish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Polish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebox Server version 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Server wersja 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
 NSPrefPaneIconLabel = "Squeezebox\nServer";
