--- a/osx/Preference Pane/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Swedish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Start Server" = "Aktivera server";
+"Start Server" = "Starta server";
 "Stop Server" = "Avaktivera server";
 "Start Server Description" = "Klicka på den här knappen för att aktivera Squeezebox Server. När du har gjort det får spelarna tillgång till ditt musikbibliotek.";
 "Stop Server Description" = "Klicka på den här knappen för att avaktivera Squeezebox Server. När du har gjort det har spelarna inte längre tillgång till ditt musikbibliotek.";
@@ -6,17 +6,17 @@
 "Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran eftersom auktoriseringen inte gäller längre.";
 "Firmware version" = "Inbyggd programvara version %@.";
 "Firmware version invalid" = "Ogiltig version av inbyggd programvara.";
-"An updated Squeezebox Server version is available and ready to be installed." = "An updated Squeezebox Server version is available and ready to be installed.";
-"There's no updated Squeezebox Server version available." = "There's no updated Squeezebox Server version available.";
-"Check for update" = "Check for update";
-"Download update" = "Download update";
-"Install update" = "Install update";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?";
-"Run Cleanup" = "Run Cleanup";
-"Cancel" = "Cancel";
-"Not now" = "Not now";
-"Abort" = "Abort";
-"Rescan" = "Rescan";
-"Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
-"The server is stopped" = "The server is stopped";
-"The server is running" = "The server is running";
+"An updated Squeezebox Server version is available and ready to be installed." = "En uppdaterad version av Squeezebox Server är tillgänglig och klar att installeras.";
+"There's no updated Squeezebox Server version available." = "Det finns ingen uppdaterad version av Squeezebox Server tillgänglig.";
+"Check for update" = "Sök efter uppdatering";
+"Download update" = "Ladda ner uppdatering";
+"Install update" = "Installera uppdatering";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server måste stoppas innan du kan köra rensningen. Vill du stoppa den nu?";
+"Run Cleanup" = "Kör rensning";
+"Cancel" = "Avbryt";
+"Not now" = "Inte nu";
+"Abort" = "Avbryt";
+"Rescan" = "Sök igen";
+"Invalid mysqueezebox.com username or password." = "Ogiltigt användarnamn eller lösenord för mysqueezebox.com";
+"The server is stopped" = "Servern har stoppats";
+"The server is running" = "Servern körs";
