--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,6 @@
 $Id$
 
-This is SqueezeBox Server for Debian.
+This is Squeezebox Server for Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
