--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 squeezeboxserver (_VERSION_) testing; urgency=low
 
-  * SqueezeBox Server Package
+  * Squeezebox Server Package
 
  -- Matt Wise <debian@slimdevices.com>  Mon, 03 Aug 2009 15:14:33 -0000
