Bug 13327: Rename all of the internal debian package stuff to squeezebox server. This should help it start up automatically on installation.
Bug: 13327
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28203 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/README
+++ b/readynas/README
@@ -1,6 +1,6 @@
 $Id$
 
-This is SqueezeBox Server for ReadyNAS units running Debian.
+This is Squeezebox Server for ReadyNAS units running Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
